# VulkanCompute

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  common.h  imgui.ini  main.cpp  math.cpp  math.h  mesh.cpp  mesh.h  render.py  vec.cpp  vec.hpp
VulkanCompute/: Profile1.ngfx-gputrace.layout  VulkanCompute.ngfx-proj
assets/shaders/: RayTracer.comp  RayTracer.comp.glsl  RayTracer.glsl  default.frag.glsl  default.vert.glsl  utils.comp  vertex.comp
src/: Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  Image.cpp  Image.h  Logger.cpp  Logger.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  UBOs.h  VulkanManager.cpp  VulkanManager.h  Window.cpp  Window.h  main.cpp
src/App/: BvhBuilder.cpp  BvhBuilder.h  BvhRenderer.cpp  BvhRenderer.h  Components.cpp  Components.h  RayTracerApp.cpp  RayTracerApp.h  UBOs.h  main.cpp
src/Core/: AssetManager.cpp  AssetManager.h  BvhBuilder.cpp  BvhBuilder.h  Logger.cpp  Logger.h  Model.cpp  Model.h  Scene.cpp  Scene.h  VulkanComputeApp.cpp  VulkanComputeApp.h  Window.cpp  Window.h
src/Vulkan/: Buffer.cpp  Buffer.h  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.h  Gui.cpp  Gui.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  Utils.cpp  Utils.h  VulkanManager.cpp  VulkanManager.h
